# droidproxy-linux

./: .SRCINFO  .gitignore  AGENTS.md  AMP_SETUP.md  CHANGELOG.md  PKGBUILD  README.md  SETUP.md  appcast-x86_64.xml  appcast.xml  create-app-bundle.sh  request-flow-visualizer.html  skills-lock.json
.github/workflows/: auto-release.yml  linux-release.yml  release.yml  update-cliproxyapi-linux.yml  update-cliproxyapi.yml
scripts/: README.md  _lib.sh  bump-version.sh  create-release.sh  publish-aur.sh  test-pkgbuild.sh
src/: .gitignore  Info.plist  pyproject.toml
src/Sources/: AppDelegate.swift  AppPreferences.swift  AuthStatus.swift  ServerManager.swift  SettingsView.swift  ThinkingProxy.swift
src/packaging/: AppImageBuilder.yml  PKGBUILD  PKGBUILD-bin  droidproxy.desktop  droidproxy.service
src/src/droidproxy/: __init__.py  __main__.py  amp.py  app.py  auth.py  backend.py  binary.py  cli.py  context.py  injector.py  installer.py  paths.py  prefs.py  proxy.py  tray.py  tunnel.py  updater.py  web.py
src/src/droidproxy/resources/factory/droids/: challenger-gpt.md
src/src/droidproxy/resources/web/: app.js  index.html  styles.css
src/tests/: test_auth.py  test_backend.py  test_binary.py  test_cli_gui.py  test_daemonize.py  test_injector.py  test_installer.py  test_prefs.py  test_proxy.py  test_tray.py  test_tunnel_amp.py  test_updater.py  test_web.py
website/: index.html  package-lock.json  package.json
website/public/: llms.txt
website/src/components/: Features.tsx  ProviderIcons.tsx  Setup.tsx
