[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "droidproxy"
version = "1.8.8"
description = "Linux port of DroidProxy: proxy Claude/Codex/Gemini subscriptions for Factory Droid CLI with thinking/reasoning injection."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "DroidProxy Linux port" },
]
keywords = ["factory", "droid", "claude", "codex", "gemini", "proxy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]

dependencies = [
    "aiohttp>=3.9",
    "watchdog>=3.0",
    "platformdirs>=4.0",
    "tomli-w>=1.0",
    "packaging>=24.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
tray = [
    "PyGObject>=3.46",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
droidproxy = "droidproxy.cli:main"

[project.urls]
Homepage = "https://github.com/anand-92/droidproxy"
Issues = "https://github.com/anand-92/droidproxy/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
droidproxy = [
    "resources/*.png",
    "resources/*.yaml",
    "resources/web/*",
    "resources/factory/droids/*.md",
    "resources/factory/commands/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
