[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "droidproxy"
version = "1.8.16"
description = "Linux port of DroidProxy: proxy Claude/Codex/Gemini subscriptions for Factory Droid CLI with thinking/reasoning injection."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "DroidProxy Linux port" },
]
keywords = ["factory", "droid", "claude", "codex", "gemini", "proxy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]

dependencies = [
    "aiohttp>=3.9",
    "watchdog>=3.0",
    "platformdirs>=4.0",
    "tomli-w>=1.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
tray = [
    "PyGObject>=3.46",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
droidproxy = "droidproxy.cli:main"

[project.urls]
Homepage = "https://github.com/StressarN/droidproxy-linux"
Issues = "https://github.com/StressarN/droidproxy-linux/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
droidproxy = [
    "resources/*.png",
    "resources/*.yaml",
    "resources/web/*",
    "resources/factory/droids/*.md",
    "resources/factory/commands/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
